# XyPriss

./: .env  .env.test  .gitignore  .gitmodules  .npmignore  .quickdevignore  .vault.xems  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_HOOKS.md  admin.storage.xems  benchmarks.md  bun_cluster_test.ts  bun_cluster_testv2.ts  check_date.ts  cluster_test.cjs  cmt.sh  cookie.txt  cookies.txt  cookies_multi.txt  cookies_multi_2.txt  cookies_single.txt  diag_config.ts  fileonix.config.json  fix-imports.cjs  fix_docs.ts  index.html  lib.ts  main.ts  memory_friendly_test.ts  notes.txt  notes.v2.json  notes.v2.txt  package-lock.json  package.json  package.json.back  plugin.ts  (+35 more)
.acpes/: 09a050ce0:nehonix.50ce0f3fbc.enc  2720a0cba:nehonix.a0cba72125.enc  f9fd8d77d:nehonix.8d77dc3a56.enc
.github/: FUNDING.yml
.private/: +xypriss.meta.ts  .env  ACPES_UTF8_FIXES.md  BUG_REPORT_XYPRISS_SECURITY.md  FAST_ROUTE_ENGINE_SUMMARY.md  INTEGRATION_FIX.md  PLUGIN_API_TEST_PLAN.md  README  README.md  SESSION_SUMMARY_2025-12-12.md  XYPRISS_BUG_REPORT.md  XYPRISS_GUARDIAN_BRAINSTORM.md  XYPRISS_Nginx_Controller_BRAINSTORM.md  XYPRISS_RUST_CORE_BRAINSTORM.md  acpes_gl_test.ts  acpes_test_data.txt  configs.ts  console-demo-simple.ts  console-interception-examples.ts  const.ts  create_test_files.ts  diagnose-proxy.cjs  feedb.md  filesystem-api.md  fw.ts  goserver.ts  index.html  ms1.ts  ms1_router2.ts  ms1router.ts  package_manager_brainstorming.md  report.md  repro_memory_error.ts  repro_memory_error_dist.ts  repro_sys.ts  request.ts  response_control_demo.ts  rs.txt  serializer.ts  server.ts  (+24 more)
.store/: vault.xems
__tests__/: COMPRESSION_FIX_SUMMARY.md  COMPRESSION_PLUGIN_COMPLETE.md  COMPRESSION_PLUGIN_IMPLEMENTATION_PLAN.md  PLACEHOLDER_IMPLEMENTATIONS.md  README.md  TEST_INVESTIGATION_REPORT.md  XYPRISS_BUG_FIX_REPORT.md  XYPRISS_BUG_REPORT.md  XYPRISS_COMPRESSION_SUMMARY.md  acpes.test.html  acpes_gl_test.ts  analytics-engine.test.ts  automatic-json-parsing.js  bun-port-test.ts  bun_cluster_test.ts  bun_cluster_testv2.ts  cache-persistence-fix-test.ts  check_date.ts  cluster_test.cjs  cluster_test.js  comprehensive-port-test.ts  configs-example.ts  configs.ts  console.test.ts  const.ts  cors-multiserver-bug.test.ts  cors-test-server.ts  cors-test.html  cors.test.ts  cpu.bench.md  crypto-operations.test.ts  data.json  debug-conflict.js  debug-memory.js  debug-port.js  debug-security.ts  debug-server-startup.ts  debug-test.js  debug_logging.ts  example-circular-fix.cjs  (+114 more)
app/: globals.css  page.tsx
architecture/: root_management.en.md  root_management.md  root_management_en.md
components/: mode-toggle.tsx  pager.tsx  search.tsx  sidebar.tsx  site-header.tsx
config/: docs.ts
debug/: profile_request.sh
docs/: CONFIGS_API.md  CONFIGS_IMPLEMENTATION.md  CONFIGS_QUICK_REFERENCE.md  CONFIGURATION.md  CONSOLE_INTERCEPTION_GUIDE.md  ENVIRONMENT_SHIELD.md  EXAMPLES.md  FAST_ROUTE_ENGINE.md  FEATURES_OVERVIEW.md  FILE_UPLOAD_GUIDE.md  GLOBAL_APIS.md  MEMORY_DETECTION.md  MULTI_SERVER.md  NETWORK_CONFIG_GUIDE.md  PLUGIN_CORE_HOOKS.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_PERMISSIONS.md  QUICK_START.md  README.md  ROUTE_BASED_SECURITY.md  SERVER_CORE_ARCHITECTURE.md  WORKSPACE_SYSTEM.md  XEMS_TUTORIAL.md  XHSC_CORE.md  api-reference.md  bun-clustering.md  cluster-api-reference.md  cluster-configuration-guide.md  cluster-overview.md  (+13 more)
rust-memory-manager/: Cargo.toml
rust-memory-manager/src/: allocation_tracker.rs  error.rs  garbage_collector.rs  utils.rs
tools/xyp/: .gitignore  Cargo.toml  README.md  dev  idevo_report.md  index.js  install.js  package copy.json  package.json  sim.sh  xfpm_issue_report.md
tools/xyp/scripts/: build.js  build.sh
tools/xyp/src/: main.rs
tools/xyp/src/commands/: exec.rs  init.rs  install.rs  list.rs  mod.rs  run.rs  start.rs  uninstall.rs
tools/xyp/src/core/: cas.rs  config.rs  extractor.rs  installer.rs  lockfile.rs  mod.rs  registry.rs  resolver.rs  script_runner.rs
tools/xyp/src/utils/: runtime.rs  shell.rs
tools/xyp/xypriss-testproject/: README.md  package.json  xypriss.config.json
tools/xyp/xypriss-testproject/src/: server.ts
tools/xypriss-sys/: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dev  test-watch.sh
tools/xypriss-sys/.cargo/: config.toml
tools/xypriss-sys/src/: advanced_watcher.rs  cli.rs  fs.rs  main.rs  sys.rs  utils.rs
tools/xypriss-sys/src/cluster/: intelligence.rs  manager.rs  mod.rs  worker.rs
tools/xypriss-sys/src/handlers/: archive.rs  fs.rs  mod.rs  monitor.rs  path.rs  search.rs  sys.rs
tools/xypriss-sys/src/server/: cluster.rs  core.rs  ipc.rs  mod.rs  quality.rs  router.rs
tools/xypriss-sys/test-watch/: file.txt
(+1043 files in other folders)
