[package]
name = "xyp"
version = "0.1.0"
edition = "2021"
authors = ["Nehonix-Team"]
description = "Official XyPriss CLI & Fast Package Manager"

[dependencies]
# CLI & UI
clap = { version = "4.4", features = ["derive"] }
indicatif = { version = "0.17", features = ["tokio"] }
colored = "2.0"

# Async & Network
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

# Cryptography & Archives
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
hex = "0.4"

# Utilities
anyhow = "1.0"
fs_extra = "1.3"
walkdir = "2.4"
uuid = { version = "1.4", features = ["v4"] }
