[package]
name = "xyp"
version = "0.1.0"
edition = "2021"
authors = ["Nehonix-Team"]
description = "Official XyPriss CLI & Fast Package Manager"

[dependencies]
# CLI & UI
clap = { version = "4.4", features = ["derive"] }
indicatif = { version = "0.17", features = ["tokio"] }
colored = "2.0"

# Async & Network
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

# Cryptography & Archives
sha2 = "0.10"
blake3 = "1.5"
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib-ng"] }
hex = "0.4"

# Utilities
anyhow = "1.0"
fs_extra = "1.3"
walkdir = "2.4"
uuid = { version = "1.4", features = ["v4"] }
dashmap = "6.1.0"
moka = { version = "0.12.12", features = ["future"] }
which = "8.0.0"
include_dir = "0.7.4"
dialoguer = "0.12.0"
zip = "7.1.0"
mimalloc = { version = "0.1.48", optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
