[package]
name = "xypriss-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
filetime = "0.2.26"
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
walkdir = "2.5.0"
