[package]
name = "xypriss-sys"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xsys"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive", "env"] }
colored = "3.0.0"
dirs = "6.0.0"
filetime = "0.2.26"
flate2 = "1.1.5"
fs_extra = "1.3.0"
indicatif = "0.18.3"
nix = { version = "0.30.1", features = ["fs"] }
notify = "8.2.0"
pathdiff = "0.2.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tar = "0.4.44"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
local-ip-address = "0.6.3"
similar = "2.6.0"
tokio = { version = "1.47.0", features = ["full"] }
axum = { version = "0.8.2", features = ["macros"] }
hyper = { version = "1.6.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
futures-util = "0.3.31"
serde_urlencoded = "0.7.1"
matchit = "0.8.4"
interprocess = "1.2.1" # For Unix Domain Sockets IPC
